tests/operator/subtract_random_string_mum.out
[31merror[error]: unsupported operand type(s) for -: 'str' and 'number'
----- Traceback -----
  ┌─ <unknown>:1:11
  | 
1 | print("a" - 1) # error
  |            ^
[0m