tests/operator/subtract_random_string_mum.my
print("a" - 1) # error
